@@ -8,15 +8,18 @@ import org.bouncycastle.openssl.PEMParser;
 import org.bouncycastle.openssl.jcajce.JcaPEMKeyConverter;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.core.io.ClassPathResource;
+import org.springframework.core.io.InputStreamResource;
 import org.springframework.stereotype.Component;
 import org.springframework.util.Base64Utils;
 import trothly.trothcam.dto.auth.apple.ApplePublicKey;
 import trothly.trothcam.dto.auth.apple.ApplePublicKeys;
 
 import java.io.IOException;
+import java.io.InputStream;
 import java.io.Reader;
 import java.io.StringReader;
 import java.math.BigInteger;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.security.KeyFactory;
@@ -97,8 +100,9 @@ public class PublicKeyGenerator {
     }
 
     public PrivateKey getPrivateKey() throws IOException {
-        ClassPathResource resource = new ClassPathResource(path);
-        String privateKey = new String(Files.readAllBytes(Paths.get(resource.getURI())));
+        ClassLoader classLoader = getClass().getClassLoader();
+        InputStream inputStream = classLoader.getResourceAsStream(path); // Auth.p8 파일의 경로에 맞게 수정
+        String privateKey = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
 
         Reader pemReader = new StringReader(privateKey);
         PEMParser pemParser = new PEMParser(pemReader);
